# ontoviewer

./: .gitignore  LICENSE  README.md  pyproject.toml
ontoviewer/: __init__.py  cli.py  labels.py  loader.py  model.py  update_check.py  visualize.py  webapp.py
src/ontoviewer/: loader.py
tests/: conftest.py  test_cli.py  test_labels.py  test_loader.py  test_update_check.py  test_visualize.py  test_webapp.py
