[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontoviewer"
version = "0.9.0"
description = "Interactive ontology class and relation visualization from OWL/RDF files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OntoViewer contributors" }
]
dependencies = [
  "rdflib>=7.0.0",
  "pyvis>=0.3.2",
  "typer>=0.12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]
web = [
  "flask>=3.0.0"
]

[project.urls]
Repository = "https://github.com/ylgrst/ontoviewer"

[project.scripts]
ontoviewer = "ontoviewer.cli:app"

[tool.setuptools.packages.find]
include = ["ontoviewer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
